fix: spacing in style.css and index

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ a {
 /* section separator */
 .reflection-text {
     position: relative;
-    margin: 20px 0px 42px;
+    margin: 2px 0px 42px;
     display: inline-block;
 }
 
